background fixed attempt 7 on mobile

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -73,7 +73,7 @@ iframe:hover {
     transform: scale(1.05);
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
     body {
         background-image: linear-gradient(to bottom right, red , yellow)!important;
     }
